--- a/pipeline_naive_bayes.ipynb
+++ b/pipeline_naive_bayes.ipynb
@@ -90,14 +90,12 @@
    "outputs": [],
    "source": [
     "steps = [\n",
-    "        ('tfidf', TfidfVectorizer(max_df=0.90, min_df=0.05)),\n",
+    "        ('tfidf', TfidfVectorizer(min_df=2)),\n",
     "        ('mnb', MultinomialNB())\n",
     "]\n",
     "pipe = Pipeline(steps=steps)\n",
     "params = {\n",
-    "        'tfidf__max_df':[0.25,0.5,0.75,0.90,1.0],\n",
-    "        'tfidf__min_df':[0.01,0.02,0.03,0.04,0.05],\n",
-    "        'mnb__alpha':[1.0000000000000001e-05,9.9999999999999995e-07,0.001,0.01,0.1]\n",
+    "         'mnb__alpha':[1.0000000000000001e-05,9.9999999999999995e-07,0.001,0.01,0.1,1.0]\n",
     "}\n",
     "scoring = ['accuracy','f1_micro', 'f1_macro']"
    ]
