--- a/pipeline_naive_bayes.ipynb
+++ b/pipeline_naive_bayes.ipynb
@@ -185,7 +185,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scoring = ['accuracy','f1_micro', 'f1_macro']\n",
     "clf = GridSearchCV(pipe, params, cv=10, n_jobs=-1, verbose=True,scoring=scoring,refit='accuracy',return_train_score=True)\n",
     "clf.fit(documents,y)\n",
     "df = pd.DataFrame(clf.cv_results_)\n",
@@ -244,7 +243,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scoring = ['accuracy','f1_micro', 'f1_macro']\n",
     "clf = GridSearchCV(pipe, params, cv=10, n_jobs=-1, verbose=True,scoring=scoring,refit='accuracy',return_train_score=True)\n",
     "clf.fit(documents,y)\n",
     "df = pd.DataFrame(clf.cv_results_)\n",
@@ -303,7 +301,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scoring = ['accuracy','f1_micro', 'f1_macro']\n",
     "clf = GridSearchCV(pipe, params, cv=10, n_jobs=-1, verbose=True,scoring=scoring,refit='accuracy',return_train_score=True)\n",
     "clf.fit(documents,y)\n",
     "df = pd.DataFrame(clf.cv_results_)\n",
@@ -362,7 +359,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scoring = ['accuracy','f1_micro', 'f1_macro']\n",
     "clf = GridSearchCV(pipe, params, cv=10, n_jobs=-1, verbose=True,scoring=scoring,refit='accuracy',return_train_score=True)\n",
     "clf.fit(documents,y)\n",
     "df = pd.DataFrame(clf.cv_results_)\n",
@@ -421,7 +417,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scoring = ['accuracy','f1_micro', 'f1_macro']\n",
     "clf = GridSearchCV(pipe, params, cv=10, n_jobs=-1, verbose=True,scoring=scoring,refit='accuracy',return_train_score=True)\n",
     "clf.fit(documents,y)\n",
     "df = pd.DataFrame(clf.cv_results_)\n",
@@ -480,7 +475,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scoring = ['accuracy','f1_micro', 'f1_macro']\n",
     "clf = GridSearchCV(pipe, params, cv=10, n_jobs=-1, verbose=True,scoring=scoring,refit='accuracy',return_train_score=True)\n",
     "clf.fit(documents,y)\n",
     "df = pd.DataFrame(clf.cv_results_)\n",
@@ -539,7 +533,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scoring = ['accuracy','f1_micro', 'f1_macro']\n",
     "clf = GridSearchCV(pipe, params, cv=10, n_jobs=-1, verbose=True,scoring=scoring,refit='accuracy',return_train_score=True)\n",
     "clf.fit(documents,y)\n",
     "df = pd.DataFrame(clf.cv_results_)\n",
@@ -598,7 +591,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scoring = ['accuracy','f1_micro', 'f1_macro']\n",
     "clf = GridSearchCV(pipe, params, cv=10, n_jobs=-1, verbose=True,scoring=scoring,refit='accuracy',return_train_score=True)\n",
     "clf.fit(documents,y)\n",
     "df = pd.DataFrame(clf.cv_results_)\n",
@@ -657,7 +649,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scoring = ['accuracy','f1_micro', 'f1_macro']\n",
     "clf = GridSearchCV(pipe, params, cv=10, n_jobs=-1, verbose=True,scoring=scoring,refit='accuracy',return_train_score=True)\n",
     "clf.fit(documents,y)\n",
     "df = pd.DataFrame(clf.cv_results_)\n",
@@ -670,7 +661,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#2 - Carregando a base de dados\n",
+    "#Carregando a base de dados\n",
     "SyskillWebert = load_files(r\"datasets/SyskillWebert-Parsed\",encoding=\"ISO-8859-1\")\n",
     "x, y = SyskillWebert.data, SyskillWebert.target  "
    ]
@@ -681,7 +672,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#3 - Pré-processamento do texto\n",
+    "#Pré-processamento do texto\n",
     "documents = []\n",
     "stemmer = WordNetLemmatizer()\n",
     "\n",
