--- a/pipeline_random_forest.ipynb
+++ b/pipeline_random_forest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.datasets import fetch_20newsgroups\n",
     "from sklearn.pipeline import Pipeline\n",
-    "rom sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import GridSearchCV \n",
     "from sklearn.feature_extraction.text import TfidfVectorizer"
    ]
@@ -27,14 +27,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#2 - Carregando a base de dados\n",
-    "newsgroups_data = fetch_20newsgroups()\n",
-    "x, y = newsgroups_data.data, newsgroups_data.target "
+    "#definindo as condições dos casos de testes\n",
+    "steps = [\n",
+    "        ('tfidf', TfidfVectorizer(min_df=2)),\n",
+    "        ('clf', RandomForestClassifier())\n",
+    "]\n",
+    "pipe = Pipeline(steps=steps)\n",
+    "params = {\n",
+    "        'clf__n_estimators':[10,20,30,40,50,60,70,80,90,100]\n",
+    "}\n",
+    "scoring = ['accuracy','f1_micro', 'f1_macro']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2 - Carregando a base de dados\n",
+    "newsgroups_data = fetch_20newsgroups()\n",
+    "x, y = newsgroups_data.data, newsgroups_data.target  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,36 +82,12 @@
     "    document = [stemmer.lemmatize(word) for word in document]\n",
     "    document = ' '.join(document)\n",
     "\n",
-    "    documents.append(document)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "steps = [\n",
-    "        ('tfidf', TfidfVectorizer(max_df=0.90, min_df=0.05)),\n",
-    "        ('clf', RandomForestClassifier())\n",
-    "]\n",
-    "pipe = Pipeline(steps=steps)\n",
-    "params = {\n",
-    "        'tfidf__max_df':[0.25,0.5,0.75,0.85,0.95,1.0],\n",
-    "        'tfidf__min_df':[0.0,0.01,0.02,0.03,0.04,0.05],\n",
-    "        'clf__n_estimators':[10,20,30,40,50,60,70,80,90,100]\n",
-    "}\n",
-    "scoring = ['accuracy','f1_micro', 'f1_macro']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    documents.append(document)\n",
+    "\n",
     "clf = GridSearchCV(pipe, params, cv=10, n_jobs=-1, verbose=True,scoring=scoring,refit='accuracy',return_train_score=True)\n",
-    "clf.fit(documents,y)"
+    "clf.fit(documents,y)\n",
+    "df = pd.DataFrame(clf.cv_results_)\n",
+    "df.to_csv('resultado_pipeline_random_forest_20ng.csv')"
    ]
   },
   {
@@ -102,8 +96,432 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Carregando a base de dados\n",
+    "classic3 = load_files(r\"datasets/classic3\")\n",
+    "x, y = classic3.data, classic3.target  \n",
+    "#Pré-processamento do texto\n",
+    "documents = []\n",
+    "stemmer = WordNetLemmatizer()\n",
+    "\n",
+    "for sen in range(0, len(x)):  \n",
+    "    # Removendo todos os caracteres especiais\n",
+    "    document = re.sub(r'\\W', ' ', str(x[sen]))\n",
+    "\n",
+    "    # removendo todos os caracteres isolados\n",
+    "    document = re.sub(r'\\s+[a-zA-Z]\\s+', ' ', document)\n",
+    "\n",
+    "    # Removendo caracter isolado do ínicio\n",
+    "    document = re.sub(r'\\^[a-zA-Z]\\s+', ' ', document) \n",
+    "\n",
+    "    # Substituindo multiplos espaços por um único espaço\n",
+    "    document = re.sub(r'\\s+', ' ', document, flags=re.I)\n",
+    "\n",
+    "    # Convertendo todas as palavras do documento para lower case\n",
+    "    document = document.lower()\n",
+    "\n",
+    "    # Lemmatization\n",
+    "    document = document.split()\n",
+    "\n",
+    "    document = [stemmer.lemmatize(word) for word in document]\n",
+    "    document = ' '.join(document)\n",
+    "\n",
+    "    documents.append(document)\n",
+    "\n",
+    "clf = GridSearchCV(pipe, params, cv=10, n_jobs=-1, verbose=True,scoring=scoring,refit='accuracy',return_train_score=True)\n",
+    "clf.fit(documents,y)\n",
     "df = pd.DataFrame(clf.cv_results_)\n",
-    "df.to_csv('resultado_pipeline_random_forest.csv')"
+    "df.to_csv('resultado_pipeline_random_forest_classic3.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Carregando a base de dados\n",
+    "CSTR = load_files(r\"datasets/CSTR\",encoding=\"ISO-8859-1\")\n",
+    "x, y = CSTR.data, CSTR.target  \n",
+    "#Pré-processamento do texto\n",
+    "documents = []\n",
+    "stemmer = WordNetLemmatizer()\n",
+    "\n",
+    "for sen in range(0, len(x)):  \n",
+    "    # Removendo todos os caracteres especiais\n",
+    "    document = re.sub(r'\\W', ' ', str(x[sen]))\n",
+    "\n",
+    "    # removendo todos os caracteres isolados\n",
+    "    document = re.sub(r'\\s+[a-zA-Z]\\s+', ' ', document)\n",
+    "\n",
+    "    # Removendo caracter isolado do ínicio\n",
+    "    document = re.sub(r'\\^[a-zA-Z]\\s+', ' ', document) \n",
+    "\n",
+    "    # Substituindo multiplos espaços por um único espaço\n",
+    "    document = re.sub(r'\\s+', ' ', document, flags=re.I)\n",
+    "\n",
+    "    # Convertendo todas as palavras do documento para lower case\n",
+    "    document = document.lower()\n",
+    "\n",
+    "    # Lemmatization\n",
+    "    document = document.split()\n",
+    "\n",
+    "    document = [stemmer.lemmatize(word) for word in document]\n",
+    "    document = ' '.join(document)\n",
+    "\n",
+    "    documents.append(document)\n",
+    "\n",
+    "clf = GridSearchCV(pipe, params, cv=10, n_jobs=-1, verbose=True,scoring=scoring,refit='accuracy',return_train_score=True)\n",
+    "clf.fit(documents,y)\n",
+    "df = pd.DataFrame(clf.cv_results_)\n",
+    "df.to_csv('resultado_pipeline_random_forest_CSTR.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Carregando a base de dados\n",
+    "ies = load_files(r\"datasets/Irish\\ Economic\\ Sentiment\",encoding=\"ISO-8859-1\")\n",
+    "x, y = ies.data, ies.target  \n",
+    "\n",
+    "#Pré-processamento do texto\n",
+    "documents = []\n",
+    "stemmer = WordNetLemmatizer()\n",
+    "\n",
+    "for sen in range(0, len(x)):  \n",
+    "    # Removendo todos os caracteres especiais\n",
+    "    document = re.sub(r'\\W', ' ', str(x[sen]))\n",
+    "\n",
+    "    # removendo todos os caracteres isolados\n",
+    "    document = re.sub(r'\\s+[a-zA-Z]\\s+', ' ', document)\n",
+    "\n",
+    "    # Removendo caracter isolado do ínicio\n",
+    "    document = re.sub(r'\\^[a-zA-Z]\\s+', ' ', document) \n",
+    "\n",
+    "    # Substituindo multiplos espaços por um único espaço\n",
+    "    document = re.sub(r'\\s+', ' ', document, flags=re.I)\n",
+    "\n",
+    "    # Convertendo todas as palavras do documento para lower case\n",
+    "    document = document.lower()\n",
+    "\n",
+    "    # Lemmatization\n",
+    "    document = document.split()\n",
+    "\n",
+    "    document = [stemmer.lemmatize(word) for word in document]\n",
+    "    document = ' '.join(document)\n",
+    "\n",
+    "    documents.append(document)\n",
+    "    \n",
+    "clf = GridSearchCV(pipe, params, cv=10, n_jobs=-1, verbose=True,scoring=scoring,refit='accuracy',return_train_score=True)\n",
+    "clf.fit(documents,y)\n",
+    "df = pd.DataFrame(clf.cv_results_)\n",
+    "df.to_csv('resultado_pipeline_random_forest_IrishEconomicSentiment.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Carregando a base de dados\n",
+    "mds = load_files(r\"datasets/multi-domain-sentiment\",encoding=\"ISO-8859-1\")\n",
+    "x, y = mds.data, mds.target \n",
+    "#Pré-processamento do texto\n",
+    "documents = []\n",
+    "stemmer = WordNetLemmatizer()\n",
+    "\n",
+    "for sen in range(0, len(x)):  \n",
+    "    # Removendo todos os caracteres especiais\n",
+    "    document = re.sub(r'\\W', ' ', str(x[sen]))\n",
+    "\n",
+    "    # removendo todos os caracteres isolados\n",
+    "    document = re.sub(r'\\s+[a-zA-Z]\\s+', ' ', document)\n",
+    "\n",
+    "    # Removendo caracter isolado do ínicio\n",
+    "    document = re.sub(r'\\^[a-zA-Z]\\s+', ' ', document) \n",
+    "\n",
+    "    # Substituindo multiplos espaços por um único espaço\n",
+    "    document = re.sub(r'\\s+', ' ', document, flags=re.I)\n",
+    "\n",
+    "    # Convertendo todas as palavras do documento para lower case\n",
+    "    document = document.lower()\n",
+    "\n",
+    "    # Lemmatization\n",
+    "    document = document.split()\n",
+    "\n",
+    "    document = [stemmer.lemmatize(word) for word in document]\n",
+    "    document = ' '.join(document)\n",
+    "\n",
+    "    documents.append(document)\n",
+    "\n",
+    "clf = GridSearchCV(pipe, params, cv=10, n_jobs=-1, verbose=True,scoring=scoring,refit='accuracy',return_train_score=True)\n",
+    "clf.fit(documents,y)\n",
+    "df = pd.DataFrame(clf.cv_results_)\n",
+    "df.to_csv('resultado_pipeline_random_forest_multi-domain-sentiment.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Carregando a base de dados\n",
+    "NSF = load_files(r\"datasets/NSF\",encoding=\"ISO-8859-1\")\n",
+    "x, y = NSF.data, NSF.target  \n",
+    "#Pré-processamento do texto\n",
+    "documents = []\n",
+    "stemmer = WordNetLemmatizer()\n",
+    "\n",
+    "for sen in range(0, len(x)):  \n",
+    "    # Removendo todos os caracteres especiais\n",
+    "    document = re.sub(r'\\W', ' ', str(x[sen]))\n",
+    "\n",
+    "    # removendo todos os caracteres isolados\n",
+    "    document = re.sub(r'\\s+[a-zA-Z]\\s+', ' ', document)\n",
+    "\n",
+    "    # Removendo caracter isolado do ínicio\n",
+    "    document = re.sub(r'\\^[a-zA-Z]\\s+', ' ', document) \n",
+    "\n",
+    "    # Substituindo multiplos espaços por um único espaço\n",
+    "    document = re.sub(r'\\s+', ' ', document, flags=re.I)\n",
+    "\n",
+    "    # Convertendo todas as palavras do documento para lower case\n",
+    "    document = document.lower()\n",
+    "\n",
+    "    # Lemmatization\n",
+    "    document = document.split()\n",
+    "\n",
+    "    document = [stemmer.lemmatize(word) for word in document]\n",
+    "    document = ' '.join(document)\n",
+    "\n",
+    "    documents.append(document)\n",
+    "\n",
+    "clf = GridSearchCV(pipe, params, cv=10, n_jobs=-1, verbose=True,scoring=scoring,refit='accuracy',return_train_score=True)\n",
+    "clf.fit(documents,y)\n",
+    "df = pd.DataFrame(clf.cv_results_)\n",
+    "df.to_csv('resultado_pipeline_random_forest_NSF.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Carregando a base de dados\n",
+    "Opinosis = load_files(r\"datasets/Opinosis-Parsed\",encoding=\"ISO-8859-1\")\n",
+    "x, y = Opinosis.data, Opinosis.target  \n",
+    "#Pré-processamento do texto\n",
+    "documents = []\n",
+    "stemmer = WordNetLemmatizer()\n",
+    "\n",
+    "for sen in range(0, len(x)):  \n",
+    "    # Removendo todos os caracteres especiais\n",
+    "    document = re.sub(r'\\W', ' ', str(x[sen]))\n",
+    "\n",
+    "    # removendo todos os caracteres isolados\n",
+    "    document = re.sub(r'\\s+[a-zA-Z]\\s+', ' ', document)\n",
+    "\n",
+    "    # Removendo caracter isolado do ínicio\n",
+    "    document = re.sub(r'\\^[a-zA-Z]\\s+', ' ', document) \n",
+    "\n",
+    "    # Substituindo multiplos espaços por um único espaço\n",
+    "    document = re.sub(r'\\s+', ' ', document, flags=re.I)\n",
+    "\n",
+    "    # Convertendo todas as palavras do documento para lower case\n",
+    "    document = document.lower()\n",
+    "\n",
+    "    # Lemmatization\n",
+    "    document = document.split()\n",
+    "\n",
+    "    document = [stemmer.lemmatize(word) for word in document]\n",
+    "    document = ' '.join(document)\n",
+    "\n",
+    "    documents.append(document)\n",
+    "\n",
+    "    \n",
+    "clf = GridSearchCV(pipe, params, cv=10, n_jobs=-1, verbose=True,scoring=scoring,refit='accuracy',return_train_score=True)\n",
+    "clf.fit(documents,y)\n",
+    "df = pd.DataFrame(clf.cv_results_)\n",
+    "df.to_csv('resultado_pipeline_random_forest_Opinosis-Parsed.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Carregando a base de dados\n",
+    "re8 = load_files(r\"datasets/re8\",encoding=\"ISO-8859-1\")\n",
+    "x, y = re8.data, re8.target  \n",
+    "#Pré-processamento do texto\n",
+    "documents = []\n",
+    "stemmer = WordNetLemmatizer()\n",
+    "\n",
+    "for sen in range(0, len(x)):  \n",
+    "    # Removendo todos os caracteres especiais\n",
+    "    document = re.sub(r'\\W', ' ', str(x[sen]))\n",
+    "\n",
+    "    # removendo todos os caracteres isolados\n",
+    "    document = re.sub(r'\\s+[a-zA-Z]\\s+', ' ', document)\n",
+    "\n",
+    "    # Removendo caracter isolado do ínicio\n",
+    "    document = re.sub(r'\\^[a-zA-Z]\\s+', ' ', document) \n",
+    "\n",
+    "    # Substituindo multiplos espaços por um único espaço\n",
+    "    document = re.sub(r'\\s+', ' ', document, flags=re.I)\n",
+    "\n",
+    "    # Convertendo todas as palavras do documento para lower case\n",
+    "    document = document.lower()\n",
+    "\n",
+    "    # Lemmatization\n",
+    "    document = document.split()\n",
+    "\n",
+    "    document = [stemmer.lemmatize(word) for word in document]\n",
+    "    document = ' '.join(document)\n",
+    "\n",
+    "    documents.append(document)\n",
+    "    \n",
+    "clf = GridSearchCV(pipe, params, cv=10, n_jobs=-1, verbose=True,scoring=scoring,refit='accuracy',return_train_score=True)\n",
+    "clf.fit(documents,y)\n",
+    "df = pd.DataFrame(clf.cv_results_)\n",
+    "df.to_csv('resultado_pipeline_random_forest_re8.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Carregando a base de dados\n",
+    "rp = load_files(r\"datasets/review_polarity\",encoding=\"ISO-8859-1\")\n",
+    "x, y = rp.data, rp.target  \n",
+    "#Pré-processamento do texto\n",
+    "documents = []\n",
+    "stemmer = WordNetLemmatizer()\n",
+    "\n",
+    "for sen in range(0, len(x)):  \n",
+    "    # Removendo todos os caracteres especiais\n",
+    "    document = re.sub(r'\\W', ' ', str(x[sen]))\n",
+    "\n",
+    "    # removendo todos os caracteres isolados\n",
+    "    document = re.sub(r'\\s+[a-zA-Z]\\s+', ' ', document)\n",
+    "\n",
+    "    # Removendo caracter isolado do ínicio\n",
+    "    document = re.sub(r'\\^[a-zA-Z]\\s+', ' ', document) \n",
+    "\n",
+    "    # Substituindo multiplos espaços por um único espaço\n",
+    "    document = re.sub(r'\\s+', ' ', document, flags=re.I)\n",
+    "\n",
+    "    # Convertendo todas as palavras do documento para lower case\n",
+    "    document = document.lower()\n",
+    "\n",
+    "    # Lemmatization\n",
+    "    document = document.split()\n",
+    "\n",
+    "    document = [stemmer.lemmatize(word) for word in document]\n",
+    "    document = ' '.join(document)\n",
+    "\n",
+    "    documents.append(document)\n",
+    "\n",
+    "clf = GridSearchCV(pipe, params, cv=10, n_jobs=-1, verbose=True,scoring=scoring,refit='accuracy',return_train_score=True)\n",
+    "clf.fit(documents,y)\n",
+    "df = pd.DataFrame(clf.cv_results_)\n",
+    "df.to_csv('resultado_pipeline_random_forest_review_polarity.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Carregando a base de dados\n",
+    "Reviews = load_files(r\"datasets/Reviews\",encoding=\"ISO-8859-1\")\n",
+    "x, y = Reviews.data, Reviews.target  \n",
+    "\n",
+    "#Pré-processamento do texto\n",
+    "documents = []\n",
+    "stemmer = WordNetLemmatizer()\n",
+    "\n",
+    "for sen in range(0, len(x)):  \n",
+    "    # Removendo todos os caracteres especiais\n",
+    "    document = re.sub(r'\\W', ' ', str(x[sen]))\n",
+    "\n",
+    "    # removendo todos os caracteres isolados\n",
+    "    document = re.sub(r'\\s+[a-zA-Z]\\s+', ' ', document)\n",
+    "\n",
+    "    # Removendo caracter isolado do ínicio\n",
+    "    document = re.sub(r'\\^[a-zA-Z]\\s+', ' ', document) \n",
+    "\n",
+    "    # Substituindo multiplos espaços por um único espaço\n",
+    "    document = re.sub(r'\\s+', ' ', document, flags=re.I)\n",
+    "\n",
+    "    # Convertendo todas as palavras do documento para lower case\n",
+    "    document = document.lower()\n",
+    "\n",
+    "    # Lemmatization\n",
+    "    document = document.split()\n",
+    "\n",
+    "    document = [stemmer.lemmatize(word) for word in document]\n",
+    "    document = ' '.join(document)\n",
+    "\n",
+    "    documents.append(document)\n",
+    "    \n",
+    "clf = GridSearchCV(pipe, params, cv=10, n_jobs=-1, verbose=True,scoring=scoring,refit='accuracy',return_train_score=True)\n",
+    "clf.fit(documents,y)\n",
+    "df = pd.DataFrame(clf.cv_results_)\n",
+    "df.to_csv('resultado_pipeline_random_forest_reviews.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Carregando a base de dados\n",
+    "SyskillWebert = load_files(r\"datasets/SyskillWebert-Parsed\",encoding=\"ISO-8859-1\")\n",
+    "x, y = SyskillWebert.data, SyskillWebert.target  \n",
+    "\n",
+    "#Pré-processamento do texto\n",
+    "documents = []\n",
+    "stemmer = WordNetLemmatizer()\n",
+    "\n",
+    "for sen in range(0, len(x)):  \n",
+    "    # Removendo todos os caracteres especiais\n",
+    "    document = re.sub(r'\\W', ' ', str(x[sen]))\n",
+    "\n",
+    "    # removendo todos os caracteres isolados\n",
+    "    document = re.sub(r'\\s+[a-zA-Z]\\s+', ' ', document)\n",
+    "\n",
+    "    # Removendo caracter isolado do ínicio\n",
+    "    document = re.sub(r'\\^[a-zA-Z]\\s+', ' ', document) \n",
+    "\n",
+    "    # Substituindo multiplos espaços por um único espaço\n",
+    "    document = re.sub(r'\\s+', ' ', document, flags=re.I)\n",
+    "\n",
+    "    # Convertendo todas as palavras do documento para lower case\n",
+    "    document = document.lower()\n",
+    "\n",
+    "    # Lemmatization\n",
+    "    document = document.split()\n",
+    "\n",
+    "    document = [stemmer.lemmatize(word) for word in document]\n",
+    "    document = ' '.join(document)\n",
+    "\n",
+    "    documents.append(document)\n",
+    "\n",
+    "clf = GridSearchCV(pipe, params, cv=10, n_jobs=-1, verbose=True,scoring=scoring,refit='accuracy',return_train_score=True)\n",
+    "clf.fit(documents,y)\n",
+    "df = pd.DataFrame(clf.cv_results_)\n",
+    "df.to_csv('resultado_pipeline_random_forest_SyskillWebert-Parsed.csv')"
    ]
   }
  ],
