--- a/pipeline_naive_bayes.ipynb
+++ b/pipeline_naive_bayes.ipynb
@@ -19,6 +19,7 @@
     "from nltk.stem import WordNetLemmatizer\n",
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.datasets import fetch_20newsgroups\n",
+    "from sklearn.datasets import load_files \n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
     "from sklearn.model_selection import GridSearchCV \n",
@@ -256,7 +257,7 @@
    "outputs": [],
    "source": [
     "#Carregando a base de dados\n",
-    "ies = load_files(r\"datasets/Irish\\ Economic\\ Sentiment\",encoding=\"ISO-8859-1\")\n",
+    "ies = load_files(r\"datasets/Irish Economic Sentiment\",encoding=\"ISO-8859-1\")\n",
     "x, y = ies.data, ies.target  "
    ]
   },
